cabal-version:      2.4
name:               xrwm
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:            GPL-3.0-only
author:             mbund

-- A copyright notice.
category: Graphics
extra-source-files:
    README.md

common common-all
    build-depends:    base ^>=4.14.3.0
                    , vulkan-api >= 1.4.0.0
                    , GLFW-b >= 3.3.0.0
    default-language: Haskell2010
    ghc-options:      -Wall

library
    import: common-all
    exposed-modules:  Lib
    hs-source-dirs:   src

executable xrwm
    import: common-all
    main-is:          Main.hs
    other-modules:    Lib
    hs-source-dirs:   app,src

executable playground
    import: common-all
    main-is:          Playground.hs
    other-modules:    Lib
    hs-source-dirs:   playground,src
    ghc-options:       -main-is Playground

