cabal-version:      2.4
name:               xrwm
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:            GPL-3.0-only
author:             mbund

-- A copyright notice.
category: Graphics
extra-source-files:
    README.md

executable xrwm
    build-depends:    base ^>=4.14.3.0
                    , vulkan-api >= 1.4.0.0
                    , GLFW-b >= 3.3.0.0
                    , inline-c >= 0.9.1.5
                    , containers
                    , template-haskell
    extra-libraries:  wlroots
                      wayland-server
    default-language: Haskell2010
    ghc-options:      -Wall -Wno-unused-top-binds -Wno-missed-extra-shared-lib -DWLR_USE_UNSTABLE
    main-is:          Main.hs
    other-modules:    Lib.Vulkan
                      Lib.Utils
                      Lib.Wayland
                      Lib.Wayland.Internal
    hs-source-dirs:   app

